--- a/examples/index.html
+++ b/examples/index.html
@@ -2,5 +2,5 @@
 <script src="/build/main.js"></script>
 <div id="root"></div>
 <script>
-  var app = Elm.Viewer.init({ node: document.getElementById("root") });
+  var app = Elm.Scene.init({ node: document.getElementById("root") });
 </script>
